# Benchmarking-foundation-models-for-satellite-image-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  train_mlp.py
configs/: config.yaml  config_ae.yaml  config_alise.yaml  config_tessera.yaml
configurations/fitting/: alise_ruche.yaml  alise_ruche_scarce.yaml  alphaearth_ruche.yaml  alphaearth_ruche_scarce.yaml  debug_alise_ruche.yaml  debug_alphaearth.yaml  tessera_ruche.yaml  tessera_ruche_scarce.yaml  utae_ruche.yaml  utae_ruche_scarce.yaml
configurations/testing/: alise_light.yaml  alise_light_scarce.yaml  alise_ruche.yaml  alise_ruche_scarce.yaml  alphaearth_light.yaml  alphaearth_light_scarce.yaml  alphaearth_ruche.yaml  alphaearth_ruche_scarce.yaml  debug_alphaearth.yaml  debug_utae_scarce.yaml  tessera_light.yaml  tessera_light_scarce.yaml  tessera_ruche.yaml  tessera_ruche_scarce.yaml  utae_light_scarce.yaml  utae_ruche_scarce.yaml
data/config_pastis_minitraining/: fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  selected_patches_fold_1_nb_100_seed_0.csv  selected_patches_fold_1_nb_100_seed_1.csv  selected_patches_fold_1_nb_100_seed_2.csv  selected_patches_fold_1_nb_100_seed_3.csv  selected_patches_fold_1_nb_100_seed_4.csv  selected_patches_fold_1_nb_100_seed_5.csv  selected_patches_fold_1_nb_100_seed_6.csv  selected_patches_fold_1_nb_100_seed_7.csv  selected_patches_fold_1_nb_100_seed_8.csv  selected_patches_fold_1_nb_100_seed_9.csv  selected_patches_fold_1_nb_150_seed_0.csv  selected_patches_fold_1_nb_150_seed_1.csv  selected_patches_fold_1_nb_150_seed_2.csv  selected_patches_fold_1_nb_30_seed_0.csv  (+256 more)
notebooks/: data-exploration.ipynb  results.ipynb
scripts/: plotting.py  runme.py
slurm/: fit-utae.sh  fit.sh  fita100-utae.sh  fita100.sh  test-utae.sh  test.sh
(+35 files in other folders)
